# cdis

./: README.md  pyproject.toml
src/cdis/: __init__.py  _bytecode.py  _compiler.py  _type_analysis.py  _vm.py
src/cdis/compiler/: _api.py  _class.py  _collection.py  _comprehension.py  _control_flow.py  _exception.py  _function.py  _generator.py  _meta.py  _object.py  _operation.py  _variable.py
src/cdis/opcode/: __init__.py  _api.py  _class.py  _collection.py  _control_flow.py  _exception.py  _function.py  _generator.py  _meta.py  _object.py  _operation.py  _stack.py  _variable.py
tests/: conftest.py  test_basic.py
