[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "cdis"
version = "0.0.1a0"
requires-python = ">=3.10"
description = "A consistent disassmbly of Python code"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["dis", "cdis", "disassembly", "code generation", "code analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/cdis-vm/cdis/tree/main"
Repository = "https://github.com/cdis-vm/cdis.git"
Issues = "https://github.com/cdis-vm/cdis/issues"


[dependency-groups]
dev = ["pytest>8", "coverage", "tox", "ruff"]


[pytest]
testpaths="tests"


[tool.ruff]

[tool.ruff.lint.per-file-ignores]
# __init__ files may use star imports, since they may be merging several sub_modules
# which each define an appropiate __all__
"__init__.py" = ["F403"]
